| Summary: | ASTERISK-26082: res_pjsip_messaging: MessageSend Content-Type can't be changed | ||||
| Reporter: | Alex (alexat) | Labels: | patch | ||
| Date Opened: | 2016-06-01 09:14:32 | Date Closed: | 2020-02-28 16:24:27.000-0600 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_messaging | ||
| Versions: | 13.9.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) res_pjsip_messaging.patch | |||
| Description: | Basically, when trying to override Content-Type, we get following sent:
{noformat} <--- Transmitting SIP request (667 bytes) to ... ---> MESSAGE sip:... SIP/2.0 Via: SIP/2.0/UDP ... From: <sip:...>;tag=... To: <sip:...> Contact: <sip:...> Call-ID: ftXWZRVPgfw3BNe8rV6KlWJJS40fbV.l CSeq: 15177 MESSAGE Event: snom-settings Content-Type: application/xml Max-Forwards: 70 User-Agent: FPBX-AsteriskNOW-13.0.120(13.9.1) Content-Type: text-plain Content-Length: 170 <content> {noformat} Please notice the duplicated Content-Type header. First it's proper one, set with MESSAGE_DATA(Content-Type), and then another one is wrongly inserted from ast_sip_body structure, which defaults to text/plain. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-01 09:14:33.522-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Alex (alexat) 2016-06-01 09:18:21.698-0500 For reference, working but probably unclean patch to fix the issue is provided. By: Sean Bright (seanbright) 2020-01-27 10:13:53.113-0600 [~mobster], can you try the [attached patch|^0001-res_pjsip_messaging-Don-t-allow-multiple-Content-Typ.patch] and let us know if it resolves this? *Edit:* Disregard. I see that it won't fix the problem. I will take another whack at it. By: Friendly Automation (friendly-automation) 2020-02-03 06:08:01.990-0600 Change 13702 merged by Friendly Automation: res_pjsip_messaging: Allow Content-Type to be overridden [https://gerrit.asterisk.org/c/asterisk/+/13702|https://gerrit.asterisk.org/c/asterisk/+/13702] By: Friendly Automation (friendly-automation) 2020-02-03 06:12:27.979-0600 Change 13679 merged by Joshua Colp: res_pjsip_messaging: Allow Content-Type to be overridden [https://gerrit.asterisk.org/c/asterisk/+/13679|https://gerrit.asterisk.org/c/asterisk/+/13679] By: Friendly Automation (friendly-automation) 2020-02-03 06:12:45.718-0600 Change 13704 merged by Joshua Colp: res_pjsip_messaging: Allow Content-Type to be overridden [https://gerrit.asterisk.org/c/asterisk/+/13704|https://gerrit.asterisk.org/c/asterisk/+/13704] By: Friendly Automation (friendly-automation) 2020-02-03 06:13:00.098-0600 Change 13703 merged by Joshua Colp: res_pjsip_messaging: Allow Content-Type to be overridden [https://gerrit.asterisk.org/c/asterisk/+/13703|https://gerrit.asterisk.org/c/asterisk/+/13703] | ||||