res_pjsip_messaging: Allow Content-Type to be overridden

ASTERISK-26082 #close
Reported by: Alex

Change-Id: I6549e90932016349bc72b0f053432dc25286f4fb